compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__module_could_not_unify6.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "fn main() { let x: String = 5 x }"

---

error: Type mismatch
  ┌─ /src/one/two.gleam:1:29
  │
1 │ fn main() { let x: String = 5 x }
  │                             ^

Expected type:

    String

Found type:

    Int


